# newsapi

./: .gitignore  README.md
.github/workflows/: format.yml
api/: .air.toml  .gitignore  Dockerfile  Makefile  go.mod  go.sum
api/api/: routes.go
api/api/handler/: auth.go  news.go  tags.go  user.go
api/api/middleware/: authentication.go  logging.go  user.go
api/cmd/news/: logging.go  main.go  server.go
api/config/: config.go
api/constants/: constants.go
api/internal/database/: models.go  repository.go
api/internal/news/: application.go  database.go  news.json  utils.go
core/: .gitignore  pyproject.toml
core/src/: config.py  main.py  models.py
core/src/clients/: api_client.py  db_client.py
db/: fill_db.sql
db/migrations/: 01_initial_schema.sql
